@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST thinking-sphinx-1.3.13.gem 139776 RMD160 d490bc8fd8139cfbe70f0c715e8e57006e2b8c97 SHA1 9ff616a4a405e63e6ce82b989d6857976f99f52c SHA256 bee781677417130d9da8859b3bf63136d7eac0595de12f509b96a37a3c9734be
 DIST thinking-sphinx-1.3.8.gem 138240 RMD160 6a69ff0d17f43c9d46945ae87c0072665507502a SHA1 75d28a94796938d70b470c03535e1e08bdc952c9 SHA256 4e3a420df8a6bd62bdc8a357324b832c898058033a3af0451e1734671715db6f
+EBUILD thinking-sphinx-1.3.13.ebuild 632 RMD160 60cf7df937d6a5129cef518f288a61bc08cdcbb8 SHA1 64b5e347076e24b58acdd63b4d64f46199bccf69 SHA256 753e0cc44030577e56547d1b46e6d3808b0eeefa9fe27e03494658eeefba4ec5
 EBUILD thinking-sphinx-1.3.8.ebuild 632 RMD160 ac59bcd3cd69f39b5c47cd88704e4a6e92b69c1a SHA1 8b4add2f63ee21aa2000b7f4500b987627a2d6a6 SHA256 a12b9d8559aef586006647c8638102562a00381cd1079b0b5959386cf234066a
-MISC ChangeLog 411 RMD160 9ae96c64ce94bb714ac0005f1bfe6f643e5d87a6 SHA1 23fbc0c92c2d4b303ad22207231c1778df8a4424 SHA256 fbb0b9fb5ed4c8fed040ca9e11ce276bffba3be2b9acbe1e9e9197d00c599523
+MISC ChangeLog 551 RMD160 29111d8e41580e82a9ea2e4a2580ed4c81aa6b89 SHA1 81f0c59f77c4ed1a2bb894046fa89df245729868 SHA256 4472a32ed4ea325d3834523bf464fe2d611fa5e40159e53374aa8f0d597d9de6
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksbkc8ACgkQVYU2Ai8K93crGwCfWL6KuviKeTL5scXnLfpCEkPE
-VXEAoJx5dajP0bvbMeEgwj/4aRHZa4yW
-=CxzU
+iEYEARECAAYFAksn9o4ACgkQeM7EJeUH71P5jgCdGPL4SXnc1QDlkmnFWSHQWwKk
+/yYAnjHcpgtiBtfFF3qMSqPp0/AQxll4
+=0TPW
 -----END PGP SIGNATURE-----
