@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thinking-sphinx-1.3.13 (15 Dec 2009)
+
+  15 Dec 2009; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-1.3.13.ebuild:
+  Version bump.
+
 *thinking-sphinx-1.3.8 (06 Dec 2009)
 
   06 Dec 2009; Hans de Graaff <graaff@gentoo.org>
